--- a/IoTEdgeEcho/modules/echomodule/Dockerfile.amd64
+++ b/IoTEdgeEcho/modules/echomodule/Dockerfile.amd64
@@ -5,7 +5,7 @@ COPY *.csproj ./
 RUN dotnet restore
 
 COPY . ./
-RUN dotnet publish -c Release -o out
+RUN dotnet publish -c Release -o out iot.edge.echo.csproj
 
 FROM mcr.microsoft.com/dotnet/core/runtime:3.1-buster-slim
 WORKDIR /app
